--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
     "typescript": "^5.4.0",
     "vite": "^5.2.0"
   }
