--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -1,15 +1,15 @@
 {
   "name": "UP for a ride",
-  "short_name": "Ride",
+  "short_name": "UpForARide",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/icon-192.jpeg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
