--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@ name = "up-for-a-ride-worker"
 main = "apps/worker/worker.ts"
 compatibility_date = "2024-05-01"
 
-# D1 binding
+# Default (dev/test) D1 binding
 [[d1_databases]]
 binding = "DB"
 database_name = "up_for_a_ride_db"
@@ -11,7 +11,18 @@ database_id = "7a37a2c9-5548-483c-9527-845dc79d08c4"
 [vars]
 OCR_SPACE_API_KEY = "YK82567465988957"
 
-# Optional: dev settings
 [dev]
 port = 8787
 local_protocol = "http"
+
+# ✅ Production environment overrides
+[env.production]
+name = "up-for-a-ride-worker-prod"
+
+[[env.production.d1_databases]]
+binding = "DB"
+database_name = "up-for-a-ride"
+database_id = "d55a8f57-b9cf-415d-8ced-b372ce6ba896"
+
+[env.production.vars]
+OCR_SPACE_API_KEY = "YK82567465988957"
