Add root build script for Cloudflare Pages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "scripts": {
     "dev": "wrangler dev --local",
     "deploy": "wrangler deploy",
-    "migrate": "wrangler d1 migrations apply up_for_a_ride_db"
+    "migrate": "wrangler d1 migrations apply up_for_a_ride_db",
+    "build": "npm run build -w apps/web",
+    "dev": "npm run dev -w apps/web",
+    "preview": "npm run preview -w apps/web"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251115.0"
