--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   "scripts": {
     "dev": "wrangler dev --local",
     "deploy": "wrangler deploy",
-    "migrate": "wrangler d1 migrations apply up_for_a_ride_db",
-    "build": "npm run build -w apps/web",
-    "dev": "npm run dev -w apps/web",
-    "preview": "npm run preview -w apps/web"
+    "migrate": "wrangler d1 migrations apply up_for_a_ride_db"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251115.0"
